--- a/style.css
+++ b/style.css
@@ -1,10 +1,26 @@
+@font-face {
+    font-family: 'minecraft';
+    src: url('fonts/1_MinecraftRegular1.otf');
+}
+
+@font-face {
+    font-family: 'minecraftBold';
+    src: url('fonts/3_MinecraftBold1.otf');
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .container {
     display: flex;
-    flex: 1;
     flex-direction: column;
     box-sizing: border-box;
-    width: 500px;
-    height: 500px;
+    width: 700px;
+    height: 700px;
     border: 3px solid black;
 }
 
@@ -18,4 +34,28 @@
     flex: 1;
     box-sizing: border-box;
     outline: 1px solid red;
+}
+
+.headerText {
+    font-family: 'minecraftBold';
+    font-size: 50px;
+    margin-bottom: 10px;
+    -webkit-text-stroke: 2px black;
+    color: gray;
+}
+
+.header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 90px;
+    margin-bottom: 30px;
+}
+
+.btn {
+    display: block;
+    font-family: 'minecraft';
+    background-color: white;
+    border-radius: 4px;
 }
